[gd_scene load_steps=17 format=3 uid="uid://bj7ef3mp2wfwp"]

[ext_resource type="Script" uid="uid://dwbfae2lvjiyj" path="res://Entities/Data/Unit.gd" id="1_fgnkd"]
[ext_resource type="Script" uid="uid://b8r6uekb2q1m7" path="res://Commands/Scripts/CommandHolder.gd" id="2_lhggb"]
[ext_resource type="PackedScene" uid="uid://dyju2wf1d0htn" path="res://AI/Generic/UnitStateMachine.tscn" id="2_r47uv"]
[ext_resource type="Script" uid="uid://npdavne2ik7o" path="res://AI/Generic/UnitAI.gd" id="3_bpv6j"]
[ext_resource type="Material" uid="uid://l4jbrlx4ers1" path="res://Shaders/UnitOutlineShader.tres" id="3_e4orr"]
[ext_resource type="Resource" uid="uid://duorjaur3q5tj" path="res://Commands/DefaultCommands.tres" id="3_phtje"]
[ext_resource type="Script" uid="uid://dnbqrr38f710c" path="res://Entities/Data/AnimationHandler.gd" id="4_r47uv"]
[ext_resource type="Texture2D" uid="uid://dp4remcsms5gm" path="res://Commands/Sprites/SelectionCircle.png" id="6_6h2nf"]
[ext_resource type="Script" uid="uid://ctgb4rxeelfog" path="res://Entities/Units/Data/HpBarVisual.gd" id="6_vb87f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r47uv"]
size = Vector2(25, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_u5kfr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fgnkd"]
radius = 342.067

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r47uv"]
bg_color = Color(0.611765, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e4orr"]
bg_color = Color(0, 0.8, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vb87f"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.18359, 0.18359, 0.18359, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r47uv"]
font_size = 12

[node name="Unit" type="CharacterBody2D" groups=["unit"]]
z_index = 10
input_pickable = true
script = ExtResource("1_fgnkd")

[node name="CommandHolder" type="Node" parent="."]
script = ExtResource("2_lhggb")
commands_data = ExtResource("3_phtje")

[node name="UnitStateMachine" parent="." instance=ExtResource("2_r47uv")]
script = ExtResource("3_bpv6j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 100
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_r47uv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = ExtResource("3_e4orr")
sprite_frames = SubResource("SpriteFrames_u5kfr")
script = ExtResource("4_r47uv")

[node name="AggroRange" type="Area2D" parent="."]
modulate = Color(1, 1, 1, 0.25)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
z_index = -1
position = Vector2(34, -4)
shape = SubResource("CircleShape2D_fgnkd")
debug_color = Color(0.995729, 0, 0.200035, 0.42)

[node name="DevState" type="Label" parent="."]
offset_left = -126.0
offset_top = -266.0
offset_right = 126.0
offset_bottom = -84.0
text = "null"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Pathfinding" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
radius = 24.0
neighbor_distance = 100.0
max_neighbors = 5
time_horizon_agents = 0.3
time_horizon_obstacles = 0.3
max_speed = 50.0
avoidance_priority = 0.5
debug_enabled = true
debug_path_custom_color = Color(1, 1, 1, 0.2)

[node name="HpBar" type="ProgressBar" parent="."]
modulate = Color(1, 1, 1, 0.588235)
offset_left = -53.0
offset_top = -47.0
offset_right = 54.0
offset_bottom = -37.0
theme_override_styles/background = SubResource("StyleBoxFlat_r47uv")
theme_override_styles/fill = SubResource("StyleBoxFlat_e4orr")
step = 1.0
value = 100.0
show_percentage = false

[node name="Panel" type="Panel" parent="HpBar"]
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 108.0
offset_bottom = 12.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vb87f")

[node name="Control" type="Control" parent="HpBar"]
anchors_preset = 0
offset_right = 107.0
offset_bottom = 10.0
script = ExtResource("6_vb87f")

[node name="HpBarLabel" type="Label" parent="."]
visible = false
offset_left = -51.0
offset_top = -46.0
offset_right = 52.0
offset_bottom = -29.0
text = "50"
label_settings = SubResource("LabelSettings_r47uv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="SelectionCircleBack" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.5)
z_index = -1
position = Vector2(0, 23)
scale = Vector2(2, 2)
texture = ExtResource("6_6h2nf")
offset = Vector2(0, -8)
region_enabled = true
region_rect = Rect2(0, 0, 32, 8)

[node name="SelectionCircleFront" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.5)
position = Vector2(0, 23)
scale = Vector2(2, 2)
texture = ExtResource("6_6h2nf")
region_enabled = true
region_rect = Rect2(0, 8, 32, 8)

[connection signal="body_entered" from="AggroRange" to="." method="_on_aggro_range_body_entered"]
[connection signal="body_exited" from="AggroRange" to="." method="_on_aggro_range_body_exited"]
