[gd_scene load_steps=16 format=3 uid="uid://bj7ef3mp2wfwp"]

[ext_resource type="Script" uid="uid://dwbfae2lvjiyj" path="res://RTS-System/Entities/Data/Unit.gd" id="1_fgnkd"]
[ext_resource type="Material" uid="uid://l4jbrlx4ers1" path="res://RTS-System/Shaders/UnitOutlineShader.tres" id="3_e4orr"]
[ext_resource type="Script" uid="uid://dnbqrr38f710c" path="res://RTS-System/Entities/Data/AnimationHandler.gd" id="4_r47uv"]
[ext_resource type="Texture2D" uid="uid://dp4remcsms5gm" path="res://RTS-System/Commands/Sprites/SelectionCircle.png" id="6_6h2nf"]
[ext_resource type="Texture2D" uid="uid://c2vkmk7h6u0ja" path="res://RTS-System/Commands/Sprites/TargetMarker.png" id="6_psfdc"]
[ext_resource type="Script" uid="uid://ctgb4rxeelfog" path="res://RTS-System/Entities/Data/HpBarVisual.gd" id="6_vb87f"]
[ext_resource type="Shader" uid="uid://22ro5s4s2v1e" path="res://RTS-System/Shaders/BuffShader.gdshader" id="6_yulot"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r47uv"]
size = Vector2(25, 25)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tiefo"]
resource_local_to_scene = true
shader = ExtResource("6_yulot")
shader_parameter/render_top = true
shader_parameter/render_bottom = false

[sub_resource type="SpriteFrames" id="SpriteFrames_u5kfr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r47uv"]
bg_color = Color(0.612, 0, 0, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e4orr"]
bg_color = Color(0, 0.8, 0, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vb87f"]
bg_color = Color(0.6, 0.6, 0.6, 0.5)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.184, 0.184, 0.184, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yulot"]
resource_local_to_scene = true
shader = ExtResource("6_yulot")
shader_parameter/render_top = false
shader_parameter/render_bottom = true

[sub_resource type="CircleShape2D" id="CircleShape2D_fgnkd"]
radius = 342.067

[node name="Unit" type="CharacterBody2D" groups=["unit"]]
z_index = 10
input_pickable = true
script = ExtResource("1_fgnkd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 100
shape = SubResource("RectangleShape2D_r47uv")

[node name="BuffLayerBack" type="Node2D" parent="."]
material = SubResource("ShaderMaterial_tiefo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = ExtResource("3_e4orr")
sprite_frames = SubResource("SpriteFrames_u5kfr")
script = ExtResource("4_r47uv")

[node name="HpBar" type="ProgressBar" parent="AnimatedSprite2D"]
visible = false
offset_left = -26.5
offset_top = -25.0
offset_right = 80.5
offset_bottom = -15.0
scale = Vector2(0.5, 0.5)
theme_override_styles/background = SubResource("StyleBoxFlat_r47uv")
theme_override_styles/fill = SubResource("StyleBoxFlat_e4orr")
step = 0.1
value = 100.0
show_percentage = false

[node name="Panel" type="Panel" parent="AnimatedSprite2D/HpBar"]
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 108.0
offset_bottom = 12.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vb87f")

[node name="Control" type="Control" parent="AnimatedSprite2D/HpBar"]
anchors_preset = 0
offset_right = 107.0
offset_bottom = 10.0
script = ExtResource("6_vb87f")

[node name="BuffLayerFront" type="Node2D" parent="."]
material = SubResource("ShaderMaterial_yulot")

[node name="AggroRange" type="Area2D" parent="."]
modulate = Color(1, 1, 1, 0.25)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
z_index = -1
position = Vector2(-1, 5)
shape = SubResource("CircleShape2D_fgnkd")
debug_color = Color(0.995729, 0, 0.200035, 0.42)

[node name="DevState" type="Label" parent="."]
offset_left = -126.0
offset_top = -266.0
offset_right = 126.0
offset_bottom = -84.0
text = "null"
horizontal_alignment = 1
vertical_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="SelectionCircleBack" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.5)
z_index = -1
position = Vector2(0, 23)
scale = Vector2(2, 2)
texture = ExtResource("6_6h2nf")
offset = Vector2(0, -8)
region_enabled = true
region_rect = Rect2(0, 0, 32, 8)

[node name="SelectionCircleFront" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.5)
position = Vector2(0, 23)
scale = Vector2(2, 2)
texture = ExtResource("6_6h2nf")
region_enabled = true
region_rect = Rect2(0, 8, 32, 8)

[node name="TargetMarker" type="Sprite2D" parent="."]
visible = false
z_index = 150
scale = Vector2(2, 2)
texture = ExtResource("6_psfdc")

[connection signal="body_entered" from="AggroRange" to="." method="_on_aggro_range_body_entered"]
[connection signal="body_exited" from="AggroRange" to="." method="_on_aggro_range_body_exited"]
